update in github

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- CARD -->
     <div class="card">
       <div class="image-wrapper">
-        <img src="https://images.unsplash.com/photo-1548013146-72479768bada" />
+        <img src="./Images/hero.jpg" alt="" srcset="">
         <button class="favorite-btn">♡</button>
       </div>
       <div class="card-body">
@@ -56,7 +56,7 @@
 
     <div class="card">
       <div class="image-wrapper">
-        <img src="https://images.unsplash.com/photo-1564501049412-61c2a3083791" />
+       <img src="./Images/casa2.jpg" alt="" srcset="">
         <button class="favorite-btn">♡</button>
       </div>
       <div class="card-body">
@@ -71,7 +71,7 @@
 
     <div class="card">
       <div class="image-wrapper">
-        <img src="casa1.jpg" />
+        <img src="./Images/casa1.jpg"/>
         <button class="favorite-btn">♡</button>
       </div>
       <div class="card-body">
@@ -86,7 +86,7 @@
 
     <div class="card">
       <div class="image-wrapper">
-      <img src=
+      <img src="./Images/casa3.jpg" alt="" srcset="">
         <button class="favorite-btn">♡</button>
       </div>
       <div class="card-body">
