update in github

--- a/cities.html
+++ b/cities.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Cities</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Cities</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="./Images/favicon.png" type="image/x-icon">
 </head>
 <body>
 
 <header>
   <div class="container navbar">
     <a href="index.html" class="logo">
-      <img src="logo.png">
+      <img src="./Images/logo.png" alt="Logo">
     </a>
     <nav>
       <a href="index.html">Home</a>
@@ -22,69 +23,119 @@
 
 <div class="container">
 
-<h2>Casablanca</h2>
-<div class="grid">
-  <div class="card" data-id="casa1" data-city="Casablanca" data-title="Sea View Apartment"
-    data-price="120" data-rating="4.8"
-    data-img="https://images.unsplash.com/photo-1548013146-72479768bada">
-    <img src="https://images.unsplash.com/photo-1548013146-72479768bada">
-    <div class="body">
-      <div class="city">Casablanca</div>
-      <h3>Sea View Apartment</h3>
-      <div class="row"><span>$120</span><span>⭐4.8</span></div>
-      <button class="fav">♡</button>
+  <!-- CASABLANCA -->
+  <h2>Casablanca</h2>
+  <div class="grid">
+
+    <div class="card"
+      data-id="casa1"
+      data-city="Casablanca"
+      data-title="Modern Apartment in Casablanca"
+      data-price="120"
+      data-rating="4.8"
+      data-img="https://images.unsplash.com/photo-1560448204-e02f11c3d0e2">
+
+      <img src="./Images/casa1.jpg">
+
+      <div class="body">
+        <div class="city">Casablanca</div>
+        <h3>Modern Apartment in Casablanca</h3>
+        <div class="row">
+          <span>$120 / night</span>
+          <span>⭐ 4.8</span>
+        </div>
+        <button class="fav">♡</button>
+      </div>
     </div>
-  </div>
-</div>
 
-<h2>Rabat</h2>
-<div class="grid">
-  <div class="card" data-id="rabat1" data-city="Rabat" data-title="Elegant Riad"
-    data-price="95" data-rating="4.7"
-    data-img="https://images.unsplash.com/photo-1564501049412-61c2a3083791">
-    <img src="https://images.unsplash.com/photo-1564501049412-61c2a3083791">
-    <div class="body">
-      <div class="city">Rabat</div>
-      <h3>Elegant Riad</h3>
-      <div class="row"><span>$95</span><span>⭐4.7</span></div>
-      <button class="fav">♡</button>
+  </div>
+
+  <!-- RABAT -->
+  <h2>Rabat</h2>
+  <div class="grid">
+
+    <div class="card"
+      data-id="rabat1"
+      data-city="Rabat"
+      data-title="City Center Apartment"
+      data-price="95"
+      data-rating="4.7"
+      data-img="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267">
+
+      <img src="./Images/rabat2.jpg">
+
+      <div class="body">
+        <div class="city">Rabat</div>
+        <h3>City Center Apartment</h3>
+        <div class="row">
+          <span>$95 / night</span>
+          <span>⭐ 4.7</span>
+        </div>
+        <button class="fav">♡</button>
+      </div>
     </div>
-  </div>
-</div>
 
-<h2>Marrakech</h2>
-<div class="grid">
-  <div class="card" data-id="marr1" data-city="Marrakech" data-title="Luxury Riad"
-    data-price="160" data-rating="4.9"
-    data-img="https://images.unsplash.com/photo-1549298916-b41d501d3772">
-    <img src="https://images.unsplash.com/photo-1549298916-b41d501d377">
-    <div class="body">
-      <div class="city">Marrakech</div>
-      <h3>Luxury Riad</h3>
-      <div class="row"><span>$160</span><span>⭐4.9</span></div>
-      <button class="fav">♡</button>
+  </div>
+
+  <!-- MARRAKECH -->
+  <h2>Marrakech</h2>
+  <div class="grid">
+
+    <div class="card"
+      data-id="marr1"
+      data-city="Marrakech"
+      data-title="Luxury Apartment in Marrakech"
+      data-price="140"
+      data-rating="4.8"
+      data-img="https://images.unsplash.com/photo-1505693416388-ac5ce068fe85">
+
+      <img src="./Images/marrakech3.jpg">
+
+      <div class="body">
+        <div class="city">Marrakech</div>
+        <h3>Luxury Apartment in Marrakech</h3>
+        <div class="row">
+          <span>$140 / night</span>
+          <span>⭐ 4.8</span>
+        </div>
+        <button class="fav">♡</button>
+      </div>
     </div>
-  </div>
-</div>
 
-<h2>Tangier</h2>
-<div class="grid">
-  <div class="card" data-id="tang1" data-city="Tangier" data-title="Sea Apartment"
-    data-price="85" data-rating="4.6"
-    data-img="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b">
-    <img src="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b">
-    <div class="body">
-      <div class="city">Tangier</div>
-      <h3>Sea Apartment</h3>
-      <div class="row"><span>$85</span><span>⭐4.6</span></div>
-      <button class="fav">♡</button>
+  </div>
+
+  <!-- TANGIER -->
+  <h2>Tangier</h2>
+  <div class="grid">
+
+    <div class="card"
+      data-id="tang1"
+      data-city="Tangier"
+      data-title="Sea View Apartment"
+      data-price="85"
+      data-rating="4.6"
+      data-img="https://images.unsplash.com/photo-1493809842364-78817add7ffb">
+
+      <img src="./Images/tangier4.jpg">
+
+      <div class="body">
+        <div class="city">Tangier</div>
+        <h3>Sea View Apartment</h3>
+        <div class="row">
+          <span>$85 / night</span>
+          <span>⭐ 4.6</span>
+        </div>
+        <button class="fav">♡</button>
+      </div>
     </div>
+
   </div>
-</div>
 
 </div>
 
-<footer>© 2026 StayBNB Morocco</footer>
+<footer>
+  © 2026 StayBNB Morocco
+</footer>
 
 <script src="script.js"></script>
 </body>
