--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <meta charset="UTF-8">
 <title>StayBNB Home</title>
 <link rel="stylesheet" href="style.css">
+<link rel="shortcut icon" href="./Images/favicon.png" type="image/x-icon">
 </head>
 <body>
 
 <header>
   <div class="container navbar">
     <a href="index.html" class="logo">
-      <img src="logo.png" alt="Logo">
+      <img src="./Images/logo.png" alt="Logo">
     </a>
     <nav>
       <a href="index.html">Home</a>
