update the new change in github

--- a/cities.html
+++ b/cities.html
@@ -2,17 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Cities</title>
+  <title>Cities | StayBNB</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="./Images/favicon.png" type="image/x-icon">
+  <link rel="icon" href="favicon.jpg">
 </head>
 <body>
 
 <header>
   <div class="container navbar">
-    <a href="index.html" class="logo">
-      <img src="./Images/logo.png" alt="Logo">
-    </a>
+    <a href="index.html" class="logo"><img src="./Images/logo.png" alt="Logo"></a>
     <nav>
       <a href="index.html">Home</a>
       <a href="cities.html">Cities</a>
@@ -22,120 +20,44 @@
 </header>
 
 <div class="container">
+  <h2>Choose a City</h2>
 
-  <!-- CASABLANCA -->
-  <h2>Casablanca</h2>
   <div class="grid">
-
-    <div class="card"
-      data-id="casa1"
-      data-city="Casablanca"
-      data-title="Modern Apartment in Casablanca"
-      data-price="120"
-      data-rating="4.8"
-      data-img="https://images.unsplash.com/photo-1560448204-e02f11c3d0e2">
-
+    <a class="card" href="casablanca.html">
       <img src="./Images/casa1.jpg">
-
       <div class="body">
         <div class="city">Casablanca</div>
-        <h3>Modern Apartment in Casablanca</h3>
-        <div class="row">
-          <span>$120 / night</span>
-          <span>⭐ 4.8</span>
-        </div>
-        <button class="fav">♡</button>
+        <h3>Explore apartments</h3>
       </div>
-    </div>
+    </a>
 
-  </div>
-
-  <!-- RABAT -->
-  <h2>Rabat</h2>
-  <div class="grid">
-
-    <div class="card"
-      data-id="rabat1"
-      data-city="Rabat"
-      data-title="City Center Apartment"
-      data-price="95"
-      data-rating="4.7"
-      data-img="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267">
-
-      <img src="./Images/rabat2.jpg">
-
+    <a class="card" href="rabat.html">
+      <img src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267">
       <div class="body">
         <div class="city">Rabat</div>
-        <h3>City Center Apartment</h3>
-        <div class="row">
-          <span>$95 / night</span>
-          <span>⭐ 4.7</span>
-        </div>
-        <button class="fav">♡</button>
+        <h3>Explore apartments</h3>
       </div>
-    </div>
+    </a>
 
-  </div>
-
-  <!-- MARRAKECH -->
-  <h2>Marrakech</h2>
-  <div class="grid">
-
-    <div class="card"
-      data-id="marr1"
-      data-city="Marrakech"
-      data-title="Luxury Apartment in Marrakech"
-      data-price="140"
-      data-rating="4.8"
-      data-img="https://images.unsplash.com/photo-1505693416388-ac5ce068fe85">
-
+    <a class="card" href="marrakech.html">
       <img src="./Images/marrakech3.jpg">
-
       <div class="body">
         <div class="city">Marrakech</div>
-        <h3>Luxury Apartment in Marrakech</h3>
-        <div class="row">
-          <span>$140 / night</span>
-          <span>⭐ 4.8</span>
-        </div>
-        <button class="fav">♡</button>
+        <h3>Explore apartments</h3>
       </div>
-    </div>
+    </a>
 
-  </div>
-
-  <!-- TANGIER -->
-  <h2>Tangier</h2>
-  <div class="grid">
-
-    <div class="card"
-      data-id="tang1"
-      data-city="Tangier"
-      data-title="Sea View Apartment"
-      data-price="85"
-      data-rating="4.6"
-      data-img="https://images.unsplash.com/photo-1493809842364-78817add7ffb">
-
+    <a class="card" href="tangier.html">
       <img src="./Images/tangier4.jpg">
-
       <div class="body">
         <div class="city">Tangier</div>
-        <h3>Sea View Apartment</h3>
-        <div class="row">
-          <span>$85 / night</span>
-          <span>⭐ 4.6</span>
-        </div>
-        <button class="fav">♡</button>
+        <h3>Explore apartments</h3>
       </div>
-    </div>
-
+    </a>
   </div>
-
 </div>
 
-<footer>
-  © 2026 StayBNB Morocco
-</footer>
+<footer>© 2026 StayBNB Morocco</footer>
 
 <script src="script.js"></script>
 </body>
