--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>StayBNB Home</title>
-<link rel="stylesheet" href="style.css">
-<link rel="shortcut icon" href="./Images/favicon.png" type="image/x-icon">
+  <meta charset="UTF-8">
+  <title>StayBNB | Home</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.jpg">
 </head>
 <body>
 
 <header>
   <div class="container navbar">
-    <a href="index.html" class="logo">
-      <img src="./Images/logo.png" alt="Logo">
-    </a>
+    <a href="index.html" class="logo"><img src="./Images/logo.png" alt="Logo"></a>
     <nav>
       <a href="index.html">Home</a>
-      <a href="cities.html">Cities</a>
+      <a href="login.html">Cities</a>
       <a href="favorites.html">Favorites</a>
     </nav>
   </div>
@@ -25,12 +23,13 @@
   <div>
     <h1>Find your stay in Morocco</h1>
     <p>Casablanca • Rabat • Marrakech • Tangier</p><br>
-    <a href="cities.html"><button>Explore Cities</button></a>
+    <!-- IMPORTANT: goes to login page -->
+    <a href="login.html"><button>Explore Cities</button></a>
   </div>
 </section>
 
 <footer>© 2026 StayBNB Morocco</footer>
-
 </body>
 </html>
+
 
