update in github

--- a/casablanca.html
+++ b/casablanca.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <title>Casablanca | StayBNB</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="favicon.jpg">
+  <link rel="icon" href="./Images/favicon.png">
 </head>
 <body>
 
 <header>
   <div class="container navbar">
-    <a href="index.html" class="logo"><img src="logo.png" alt="Logo"></a>
+    <a href="index.html" class="logo"><img src="./Images/logo.png" alt="Logo"></a>
     <nav>
       <a href="index.html">Home</a>
       <a href="cities.html">Cities</a>
