--- a/cities.html
+++ b/cities.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Cities | StayBNB</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="favicon.jpg">
+  <link rel="icon" href="./Images/favicon.png">
 </head>
 <body>
 
