--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>StayBNB | Home</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="favicon.jpg">
+  <link rel="shortcut icon" href="./Images/favicon.png" type="image/x-icon">
 </head>
 <body>
 
