--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Login | StayBNB</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="favicon.jpg">
+  <link rel="icon" href="./Images/">
 </head>
 <body>
 
