--- a/tangier.html
+++ b/tangier.html
@@ -10,7 +10,7 @@
 
 <header>
   <div class="container navbar">
-    <a href="index.html" class="logo"><img src="logo.png" alt="Logo"></a>
+    <a href="index.html" class="logo"><img src="./Images/logo.png" alt="Logo"></a>
     <nav>
       <a href="index.html">Home</a>
       <a href="cities.html">Cities</a>
