--- a/favorites.html
+++ b/favorites.html
@@ -1,51 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Favorites | StayBNB</title>
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="style.css">
-
-  <!-- FAVICON (IMPORTANT) -->
-  <link rel="icon" href="./Images/favicon.png">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Favorites</title>
+<link rel="stylesheet" href="style.css">
+<link rel="icon" href="./Images/favicon.png">
 </head>
 <body>
 
-<!-- HEADER -->
 <header>
   <div class="container navbar">
-    
-    <!-- LOGO -->
-    <a href="index.html" class="logo">
-      <img src="./Images/logo.png" alt="">
-    </a>
-
-    <!-- NAVIGATION -->
+    <a class="logo" href="index.html"><img src="./Images/logo.png"></a>
     <nav>
       <a href="index.html">Home</a>
-      <a href="cities.html">Cities</a>
       <a href="favorites.html">Favorites</a>
+      <a href="login.html">Login</a>
+      <a href="reservations.html">Reservations</a>
     </nav>
-
   </div>
 </header>
 
-<!-- MAIN CONTENT -->
-<div class="container">
-  <h2>Your Favorites</h2>
+<section class="section">
+  <div class="container">
+    <h2 class="section-title">Your Favorites</h2>
+    <div class="grid" id="favoritesGrid"></div>
+  </div>
+</section>
 
-  <!-- FAVORITES WILL APPEAR HERE -->
-  <div class="grid" id="favoritesBox"></div>
-</div>
-
-<!-- FOOTER -->
-<footer>
-  © 2026 StayBNB Morocco
-</footer>
-
-<!-- JAVASCRIPT (VERY IMPORTANT) -->
+<footer>© 2026 StayBNB</footer>
 <script src="script.js"></script>
-
 </body>
 </html>
