--- a/login.html
+++ b/login.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Login | StayBNB</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="./Images/">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Login</title>
+<link rel="stylesheet" href="style.css">
+<link rel="shortcut icon" href="./Images/favicon.png" type="image/x-icon">
 </head>
 <body>
 
 <header>
   <div class="container navbar">
-    <a href="index.html" class="logo"><img src="./Images/logo.png" alt="Logo"></a>
+    <a class="logo" href="index.html"><img src="./Images/logo.png"></a>
     <nav>
       <a href="index.html">Home</a>
-      <a href="login.html">Cities</a>
       <a href="favorites.html">Favorites</a>
+      <a href="reservations.html">Reservations</a>
     </nav>
   </div>
 </header>
 
-<div class="container">
-  <h2>Login</h2>
-
-  <div style="max-width:420px; border:1px solid #eee; padding:16px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,0.08);">
-    <label><b>Email</b></label><br>
-    <input id="email" type="email" placeholder="example@email.com"
-      style="width:100%; padding:10px; margin:8px 0 12px; border-radius:8px; border:1px solid #ddd;"><br>
-
-    <label><b>Password</b></label><br>
-    <input id="password" type="password" placeholder="••••••••"
-      style="width:100%; padding:10px; margin:8px 0 12px; border-radius:8px; border:1px solid #ddd;"><br>
-
-    <button id="loginBtn" style="width:100%; padding:10px; border:none; border-radius:8px; background:#ff6a00; color:white; font-weight:bold; cursor:pointer;">
-      Login
-    </button>
-
-    <p id="msg" style="margin-top:10px; color:#e11d48; font-weight:bold;"></p>
+<section class="section">
+  <div class="form">
+    <input class="input" placeholder="Email">
+    <input class="input" type="password" placeholder="Password">
+    <button class="reserve-btn" onclick="loginNow()">Login</button>
   </div>
-</div>
+</section>
 
-<footer>© 2026 StayBNB Morocco</footer>
-
+<footer>© 2026 StayBNB</footer>
 <script src="script.js"></script>
 </body>
 </html>
+<div class="card">
+  <img src="https://images.unsplash.com/photo-1560448204-e02f11c3d0e2">
+  <div class="body">
+    <div class="tag">Casablanca</div>
+    <h3>Modern Apartment</h3>
+    <div class="row">400 MAD/night</div>
+
+    <a href="casablanca.html">
+      <button class="reserve-btn">View Homes</button>
+    </a>
+  </div>
+</div>
